fix: Horizontal scrolling on small screens

--- a/src/index.css
+++ b/src/index.css
@@ -75,6 +75,7 @@ section.section-text {
     max-width: 910px;
     font-size: 1.4em;
     text-align: center;
+    word-break: break-word;
 }
 
 .link-github {
